# Ops-Guard

./: LICENSE  README.md  pyproject.toml  setup.py
opsguard/: .gitignore
opsguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
opsguard/cli/: main.py
opsguard/cli/commands/: container.py  containers.py  incident.py  incidents.py  init.py  register_container.py  start.py  status.py
opsguard/cli/utils/: container_registry.py  project.py
opsguard/server/: main.py
opsguard/server/ai/: context_builder.py  context_builder_execution.py  execution_planner.py  investigator.py  mock_provider.py  provider.py  schemas.py
opsguard/server/ai/prompts/: execution_plan.txt  incident_analysis.txt
opsguard/server/ai/providers/: ollama_provider.py  (+1 more)
opsguard/server/analysis/: evidence_collector.py  log_parser.py  root_cause.py  trace_analyzer.py
opsguard/server/context/: collector.py  context_builder.py  dependency_context.py  docker_context.py  git_context.py  models.py  source_code.py
opsguard/server/core/: incident_state.py
opsguard/server/execution/: dispatcher.py  manager.py
opsguard/server/git_tools/: commit_analyzer.py  git_correlator.py
opsguard/server/observer/: crash_detector.py  docker_events.py  incident_manager.py
opsguard/server/registry/: repo_registry.py  repos.json
opsguard/server/remediation/: approvals.py  executor.py  planner.py  queue.py  verifier.py  worker.py
opsguard/server/runtime/: project_context.py
opsguard/server/storage/: execution_store.py  incident_store.py  log_storage.py
opsguard/server/tools/: docker_tools.py  filesystem_tools.py  registry.py
(+2 files in other folders)
